<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:theme="@style/Theme.AppCompat.Light"
    card_view:cardCornerRadius="12dp"
    card_view:cardBackgroundColor="@color/white"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="18dp"
            android:layout_gravity="center_vertical"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/store_logo"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cardText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/num_item"
                    android:fontFamily="sans-serif-condensed-light"/>

                <TextView
                    android:id="@+id/inTheStore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/in_store"
                    android:fontFamily="sans-serif-condensed-light"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/collected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/collected"
                    android:fontFamily="sans-serif-condensed-light"/>

                <TextView
                    android:id="@+id/reached"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/reached"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed-light"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                android:id="@+id/ItemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_vertical"
                android:text="@string/view_item"
                android:background="@drawable/shape_gradient_purple_rounded"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed-light"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>