<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_shopper"
    tools:context=".ShopperItemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.AppCompat.Light">

        <LinearLayout
            android:id="@+id/itemPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="80dp"
                        android:layout_gravity="start"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_logo" />

                    <TextView
                        android:id="@+id/appName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-20dp"
                        android:text="@string/hands_free"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-light"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>

            <!-- Buttons to filter cards -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/allButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_all"
                    android:background="@drawable/shape_grey_rounded"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed-light"/>

                <Button
                    android:id="@+id/reachedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reached"
                    android:background="@drawable/shape_grey_rounded"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed-light"/>

                <Button
                    android:id="@+id/collectedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collected"
                    android:background="@drawable/shape_grey_rounded"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed-light"/>

                <Button
                    android:id="@+id/storeButton"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/in_store"
                    android:textStyle="bold"
                    android:background="@drawable/shape_grey_rounded"
                    android:fontFamily="sans-serif-condensed-light"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cardContainer"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>