<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_shopper"
    tools:context=".ShopperAccountFragment"
    android:theme="@style/Theme.AppCompat.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/appName"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-20dp"
                android:textStyle="bold"
                android:text="@string/hands_free"
                android:layout_below="@id/logoImage"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-light"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:id="@+id/signOutTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_out"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-condensed-light"/>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <TextView
                android:id="@+id/greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:cardCornerRadius="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_active"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_account_filed"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"/>

                        <TextView
                            android:id="@+id/statusAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_blue"
                            android:text="@string/status_account_default"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_username" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_field"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"/>

                        <EditText
                            android:id="@+id/shopperName"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textSize="18sp"
                            android:inputType="text"
                            android:hint="@string/name_hint"
                            android:padding="12dp"
                            android:fontFamily="sans-serif-condensed-light"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_phone"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_field"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"/>

                        <EditText
                            android:id="@+id/shopperPhone"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_hint"
                            android:gravity="start"
                            android:textSize="18sp"
                            android:inputType="text"
                            android:padding="12dp"
                            android:fontFamily="sans-serif-condensed-light"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_a_email"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_field"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"/>

                        <TextView
                            android:id="@+id/shopperEmail"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textSize="18sp"
                            android:padding="12dp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginVertical="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info_1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-light"/>

                    <TextView
                        android:id="@+id/handsFreeEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hands_free_email"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-light"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="25dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="270dp"
                    android:layout_height="55dp"
                    android:text="@string/update_btn"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/shape_gradient_purple_rounded"
                    android:fontFamily="sans-serif-condensed-light"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>